# Mnemo

./: .gitignore  ARCHITECTURE_V2.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_v0.5.md  DISTRIBUTION.md  InstallationProblemDoc.docx  LICENSE  Mnemo.sln  Mnemo_Evolution_Plan.docx  Mnemo_TRD.docx  README.md  TASKS.md  Test_Mnemo.md  entry.py  mcp-config.json  mnemo.spec  pyinstaller.spec  pyproject.toml  test_all_tools.py  ~$stallationProblemDoc.docx
.amazonq/rules/: mnemo.md
.github/ISSUES/: 02-package-name-mismatch.md  03-deploy-website.md  04-publish-npm-package.md  07-ci-improvements.md  08-post-tool-hook-file-path.md
.github/workflows/: binary-release.yml  ci.yml  pages.yml  release.yml
analyzers/roslyn/: MnemoAnalyzer.csproj  Program.cs
benchmark/: README.md  search_quality.py
council/: council.sh  generate.sh  synthesize.sh
council/evaluators/: adversarial.sh  drift.sh  innovation.sh  realworld.sh  security.sh
council/lib/: common.sh  memory.sh  phases.sh
council/roles/: adversarial.md  drift.md  innovation.md  realworld.md  security.md
docs/: CODE_AUDIT_2026_06_20.md  NEXT_STEPS.md  PLAN_2026_06_20.md  RESTRUCTURING_STRATEGY.md
hive/: README.md
hive/templates/: choice.md  decided.md  decision.md  fix.md  gotcha.md  howto.md  path.md  pattern.md  pitfall.md  playbook.md  trap.md
mnemo/: __init__.py  api.py  chunking.py  cli.py  clients.py  config.py  doctor.py  enrichment.py  init.py  intent.py  mcp_server.py  memory.py  middleware.py  repo_map.py  retrieval.py  serve.py  sqlite_adapter.py  storage.py  tool_registry.py  types.py  watcher.py
mnemo/analyzers/: __init__.py
mnemo/api_discovery/: __init__.py
mnemo/breaking/: __init__.py
mnemo/code_review/: __init__.py
mnemo/commit_gen/: __init__.py  mining.py
mnemo/conventions/: __init__.py
mnemo/core/: __init__.py  atomic.py  datamark.py  injection.py  store.py
mnemo/corrections/: __init__.py
mnemo/dead_code/: __init__.py
mnemo/dependency_graph/: __init__.py
mnemo/drift/: __init__.py
mnemo/embeddings/: __init__.py  dense.py
mnemo/engine/: __init__.py  cache.py  clustering.py  db.py  freshness.py  java_enrich.py  layout.py  memory_graph.py  pipeline.py  query.py  schema.py  scope.py  workers.py
mnemo/errors/: __init__.py
mnemo/graph/: __init__.py  builder.py  local.py  query.py  relationships.py  workspace.py
mnemo/health/: __init__.py
mnemo/hooks/: __init__.py  claude.py  discovery.py  extractor.py  git.py  kiro.py
mnemo/incidents/: __init__.py
mnemo/intelligence/: __init__.py
mnemo/knowledge/: __init__.py
mnemo/memory/: __init__.py  _shared.py  decisions.py  episodes.py  hierarchy.py  indexing.py  lessons.py  linking.py  retention.py  search.py  services.py  slots.py  store.py  temporal.py
mnemo/onboarding/: __init__.py
mnemo/persistence/: export.py  snapshot.py
mnemo/plan/: __init__.py
mnemo/pr_gen/: __init__.py
mnemo/prompts/: __init__.py
mnemo/quality/: __init__.py  breaking.py  conventions.py  gates.py  health.py  regressions.py  security.py
mnemo/records/: __init__.py  corrections.py  incidents.py
mnemo/regressions/: __init__.py
mnemo/repo_map/: __init__.py  generator.py  identity.py  parsers.py  scanner.py
mnemo/rules/: mnemo-rules.md
mnemo/security/: __init__.py
mnemo/skills/: __init__.py  orchestrator.py  sdlc_skill.md
mnemo/sprint/: __init__.py
mnemo/team_graph/: __init__.py
mnemo/templates/: __init__.py  generator.py
scripts/: build_binary.ps1  install.sh
tests/: benchmark_performance.py  test_audit.py  test_chunking_semantic.py  test_circuit_breaker.py  test_clients.py  test_code_quality_tools.py  test_commit_gen.py  test_decisions_eventsourced.py  test_doctor.py  test_embeddings.py  test_engine_db.py  test_engine_pipeline.py  test_engine_query.py  test_enrichment.py  test_export.py  test_full_cycle.py  test_graph_tools.py  test_hook_lifecycle.py  test_hooks.py  test_init.py  test_integration_pipeline.py  test_intelligence_advanced.py  test_knowledge.py  test_mcp_integration.py  test_mcp_semantic_tools.py  test_memory.py  test_memory_comprehensive.py  test_memory_lifecycle.py  test_metrics.py  test_monster_harness.py  test_parsers_multilang.py  test_plan_features.py  test_pr_gen.py  test_privacy.py  test_quality_modules.py  test_remaining_modules.py  test_repo_map_storage.py  test_retrieval.py  test_search_quality.py  test_secondary_collections.py  (+10 more)
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
website/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+69 files in other folders)
