[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo"
version = "0.1.0"
description = "Persistent memory and repo map for AI coding assistants"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-c-sharp>=0.21",
    "tree-sitter-go>=0.21",
    "gitpython>=3.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
mnemo = "mnemo.cli:cli"
mnemo-mcp = "mnemo.mcp_server:run_stdio"

[tool.setuptools.packages.find]
where = ["."]
include = ["mnemo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501", "F401"]
