[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo-dev"
version = "0.5.1"
description = "Persistent memory and repo map for AI coding assistants"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [{name = "Mnemo Contributors"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-c-sharp>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-rust>=0.21",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.24",
    "real_ladybug>=0.15",
    "typing_extensions>=4.0;python_version<'3.11'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Mnemo-mcp/Mnemo"
Repository = "https://github.com/Mnemo-mcp/Mnemo"
Issues = "https://github.com/Mnemo-mcp/Mnemo/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.5",
]
binary = [
    "pyinstaller>=6.0",
]
all-languages = [
    "tree-sitter-ruby>=0.21",
    "tree-sitter-php>=0.22",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.21",
    "tree-sitter-kotlin>=0.21",
    "tree-sitter-swift>=0.21",
    "tree-sitter-scala>=0.21",
]

[project.scripts]
mnemo = "mnemo.cli:cli"
mnemo-mcp = "mnemo.mcp_server:run_stdio"

[tool.setuptools.packages.find]
where = ["."]
include = ["mnemo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["benchmark"]

[tool.ruff.lint]
ignore = ["E501", "F401"]
